--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,5 +67,5 @@ jobs:
           set -a
           infisical export --env "$INFISICAL_ENVIRONMENT" --path "$INFISICAL_PATH" --domain "$INFISICAL_DOMAIN" > infisical-vars.env && source infisical-vars.env && rm -rf infisical-vars.env
           set +a
-          terraform plan -var='INFISICAL_TOKEN=${{env.INFISICAL_TOKEN}}' -var='ENV=${{env.ENV}}' -input=false -no-color -out=./tfplan | tee ./terraform-plan-output.txt
+          terraform plan  -var='ENV=${{env.ENV}}' -input=false -no-color -out=./tfplan | tee ./terraform-plan-output.txt
         continue-on-error: false
