--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Checkout Release
         run: |
-          git checkout ${{ inputs.release_version
+          git checkout ${{ inputs.release_version }}
 
       name: Confirm Release Checked out successfully
       run: |
