--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           git checkout ${{ inputs.release_version }}
 
-      name: Confirm Release Checked out successfully
-      run: |
+      - name: Confirm Release Checked out successfully
+        run: |
           pwd
