--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -4,7 +4,7 @@ on:
   push:
     tag: '[0-9].[0-9].[0-9].[0-9]'
 
-run-name: Deploying Release ${{ github.ref }}
+run-name: Deploying Release ${{ github.ref_name }}
 
 jobs:
     datalake-terraform-deploy-dev:
