--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -1,22 +1,198 @@
-name: Zal-Test-Workflow
+name: BDM-DataLake-Terraform-Deploy-Nonprod
+run-name: Release ${{ github.ref_name }}
 
 on:
-  push:
-    tag: '[0-9].[0-9].[0-9].[0-9]'
+  workflow_dispatch:
+    inputs:
+      release_tag:
+        description: Release Tag
+        required: true
 
-run-name: Deploying Release ${{ github.ref_name }}
+  push:
+    tags:
+      - '[0-9].[0-9].*-nonprod'
 
 jobs:
-    datalake-terraform-deploy-dev:
+    datalake-terraform-plan-dev:
+      environment: DEV
       runs-on: ubuntu-latest
       defaults:
         run:
           shell: bash
+      outputs:
+        tag: ${{ steps.tags.outputs.new_tag }}
+      steps:
+      - name: Checkout Release with Input Tag
+        if: ${{ github.ref_name == main || github.ref_name == dev }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.inputs.release_tag }}
+      - name: Checkout Release via Triggered Run
+        if: ${{ github.ref_name != main || github.ref_name != dev }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
+      - name: 'Cleanup build folder'
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
+      - uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - name: Install Infisical
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          apt-get update && curl -1sLf 'https://artifacts-cli.infisical.com/setup.deb.sh' | bash
+          apt-get update && apt-get install -y infisical
+          infisical --version
+
+      - uses: hashicorp/setup-terraform@v3
+      - name: Terraform init
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          set -a
+          infisical export --env "$INFISICAL_ENVIRONMENT" --path "$INFISICAL_PATH" --domain "$INFISICAL_DOMAIN" > infisical-vars.env && source infisical-vars.env && rm -rf infisical-vars.env
+          set +a
+          terraform init -backend-config BackendConfig/dev-backend-config.tfvars -no-color -input=false
+
+      - name: Terraform plan
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          set -a
+          infisical export --env "$INFISICAL_ENVIRONMENT" --path "$INFISICAL_PATH" --domain "$INFISICAL_DOMAIN" > infisical-vars.env && source infisical-vars.env && rm -rf infisical-vars.env
+          set +a
+          terraform plan -no-color -var="INFISICAL_TOKEN=${INFISICAL_TOKEN}" -var="INFISICAL_ENVIRONMENT=${INFISICAL_ENVIRONMENT}" -var="INFISICAL_DOMAIN=${INFISICAL_DOMAIN}" -var="INFISICAL_PATH=${INFISICAL_PATH}" -input=false -out=./tfplan | tee ./terraform-plan-output.txt
+
+    datalake-terraform-apply-dev:
+      environment: DEV
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          shell: bash
+      outputs:
+        tag: ${{ steps.tags.outputs.new_tag }}
+      steps:
+      - name: 'Cleanup build folder'
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
+      - name: Checkout Release with Input Tag
+        if: ${{ github.ref_name == main || github.ref_name == dev }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.inputs.release_tag }}
+      - name: Checkout Release via Triggered Run
+        if: ${{ github.ref_name != main || github.ref_name != dev }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - name: Install Infisical
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          apt-get update && curl -1sLf 'https://artifacts-cli.infisical.com/setup.deb.sh' | bash
+          apt-get update && apt-get install -y infisical
+          infisical --version
+
+      - uses: hashicorp/setup-terraform@v3
+      - name: Terraform init
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          terraform init -backend-config BackendConfig/dev-backend-config.tfvars -no-color -input=false
+
+      - name: Terraform apply
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          set -a
+          infisical export --env "$INFISICAL_ENVIRONMENT" --path "$INFISICAL_PATH" --domain "$INFISICAL_DOMAIN" > infisical-vars.env && source infisical-vars.env && rm -rf infisical-vars.env
+          set +a
+          terraform apply -var="INFISICAL_TOKEN=${INFISICAL_TOKEN}" -var="INFISICAL_ENVIRONMENT=${INFISICAL_ENVIRONMENT}" -var="INFISICAL_DOMAIN=${INFISICAL_DOMAIN}" -var="INFISICAL_PATH=${INFISICAL_PATH}" -input=false -no-color -auto-approve
+
+    datalake-terraform-plan-sit:
+      environment: SIT
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          shell: bash
+      outputs:
+        tag: ${{ steps.tags.outputs.new_tag }}
       steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.release_version }}
-
-      - name: Confirm Release Checked out successfully
+          ref: ${{ github.ref_name }}
+      - name: 'Cleanup build folder'
         run: |
-          ls -la .github
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
+      - uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - uses: hashicorp/setup-terraform@v3
+      - name: Terraform init
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          terraform init -backend-config BackendConfig/sit-backend-config.tfvars -no-color -input=false
+
+      - name: Terraform plan
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          terraform plan -no-color -var="INFISICAL_TOKEN=${INFISICAL_TOKEN}" -var="INFISICAL_ENVIRONMENT=${INFISICAL_ENVIRONMENT}" -var="INFISICAL_DOMAIN=${INFISICAL_DOMAIN}" -var="INFISICAL_PATH=${INFISICAL_PATH}" -input=false -out=./tfplan | tee ./terraform-plan-output.txt
+
+    datalake-terraform-apply-sit:
+      environment: SIT
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          shell: bash
+      outputs:
+        tag: ${{ steps.tags.outputs.new_tag }}
+      steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
+      - name: 'Cleanup build folder'
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
+      - uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - uses: hashicorp/setup-terraform@v3
+      - name: Terraform init
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          terraform init -backend-config BackendConfig/sit-backend-config.tfvars -no-color -input=false
+
+      - name: Terraform apply
+        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        run: |
+          terraform apply -var="INFISICAL_TOKEN=${INFISICAL_TOKEN}" -var="INFISICAL_ENVIRONMENT=${INFISICAL_ENVIRONMENT}" -var="INFISICAL_DOMAIN=${INFISICAL_DOMAIN}" -var="INFISICAL_PATH=${INFISICAL_PATH}" -input=false -no-color -auto-approve
