--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       release_tag:
         description: Release Tag
-        required: true
+        required: false
 
   push:
     tags:
@@ -23,12 +23,12 @@ jobs:
         tag: ${{ steps.tags.outputs.new_tag }}
       steps:
       - name: Checkout Release with Input Tag
-        if: ${{ github.ref_name == main || github.ref_name == dev }}
+        if: ${{ github.ref_name == "main" || github.ref_name == "dev" }}
         uses: actions/checkout@v3
         with:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
-        if: ${{ github.ref_name != main || github.ref_name != dev }}
+        if: ${{ github.ref_name != "main" || github.ref_name != "dev" }}
         uses: actions/checkout@v3
         with:
           ref: ${{ github.ref_name }}
@@ -46,29 +46,16 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Install Infisical
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
-        run: |
-          apt-get update && curl -1sLf 'https://artifacts-cli.infisical.com/setup.deb.sh' | bash
-          apt-get update && apt-get install -y infisical
-          infisical --version
-
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform init
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        working-directory: ${{ github.workspace }}
         run: |
-          set -a
-          infisical export --env "$INFISICAL_ENVIRONMENT" --path "$INFISICAL_PATH" --domain "$INFISICAL_DOMAIN" > infisical-vars.env && source infisical-vars.env && rm -rf infisical-vars.env
-          set +a
           terraform init -backend-config BackendConfig/dev-backend-config.tfvars -no-color -input=false
 
       - name: Terraform plan
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        working-directory: ${{ github.workspace }}
         run: |
-          set -a
-          infisical export --env "$INFISICAL_ENVIRONMENT" --path "$INFISICAL_PATH" --domain "$INFISICAL_DOMAIN" > infisical-vars.env && source infisical-vars.env && rm -rf infisical-vars.env
-          set +a
-          terraform plan -no-color -var="INFISICAL_TOKEN=${INFISICAL_TOKEN}" -var="INFISICAL_ENVIRONMENT=${INFISICAL_ENVIRONMENT}" -var="INFISICAL_DOMAIN=${INFISICAL_DOMAIN}" -var="INFISICAL_PATH=${INFISICAL_PATH}" -input=false -out=./tfplan | tee ./terraform-plan-output.txt
+          terraform plan -no-color -input=false -out=./tfplan | tee ./terraform-plan-output.txt
 
     datalake-terraform-apply-dev:
       environment: DEV
@@ -101,13 +88,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-      - name: Install Infisical
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
-        run: |
-          apt-get update && curl -1sLf 'https://artifacts-cli.infisical.com/setup.deb.sh' | bash
-          apt-get update && apt-get install -y infisical
-          infisical --version
 
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform init
@@ -195,4 +175,4 @@ jobs:
       - name: Terraform apply
         working-directory: ${{ github.workspace }}/Projects/Data-Lake
         run: |
-          terraform apply -var="INFISICAL_TOKEN=${INFISICAL_TOKEN}" -var="INFISICAL_ENVIRONMENT=${INFISICAL_ENVIRONMENT}" -var="INFISICAL_DOMAIN=${INFISICAL_DOMAIN}" -var="INFISICAL_PATH=${INFISICAL_PATH}" -input=false -no-color -auto-approve
+          terraform apply -input=false -no-color -auto-approve
