--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -5,7 +5,7 @@ on:
 
   push:
     tags:
-      - '[0-9].[0-9].*-nonprod'
+      - '[0-9].[0-9].[0-9]-nonprod'
 
 jobs:
     datalake-terraform-plan-dev:
@@ -61,13 +61,7 @@ jobs:
           rm -rf ./* || true
           rm -rf ./.??* || true
           ls -la ./
-      - name: Checkout Release with Input Tag
-        if: ${{ github.ref_name == main || github.ref_name == dev }}
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
-        if: ${{ github.ref_name != main || github.ref_name != dev }}
         uses: actions/checkout@v3
         with:
           ref: ${{ github.ref_name }}
