--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -77,7 +77,7 @@ jobs:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
         uses: actions/checkout@v3
-        if: github.ref_name == '[0-9].[0-9].[0-9]-nonprod'
+        if: startsWith(github.ref, 'refs/tags'
         with:
           ref: ${{ github.ref_name }}
       - name: Configure AWS credentials
