--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -34,7 +34,7 @@ jobs:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
         uses: actions/checkout@v3
-        if: startsWith(github.ref, 'refs/tags'
+        if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
       - name: Configure AWS credentials
@@ -77,7 +77,7 @@ jobs:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
         uses: actions/checkout@v3
-        if: startsWith(github.ref, 'refs/tags'
+        if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
       - name: Configure AWS credentials
