--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -29,7 +29,7 @@ jobs:
           ls -la ./
       - name: Checkout Release via Workflow Dispatch
         uses: actions/checkout@v3
-        if: github.ref_name == 'main' || github.ref_name == 'dev'
+        if: github.ref_name == 'dev'
         with:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
@@ -72,7 +72,7 @@ jobs:
           ls -la ./
       - name: Checkout Release via Workflow Dispatch
         uses: actions/checkout@v3
-        if: github.ref_name == 'main' || github.ref_name == 'dev'
+        if: github.ref_name == 'dev'
         with:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
@@ -112,12 +112,12 @@ jobs:
       steps:
       - name: Checkout Release via Workflow Dispatch
         uses: actions/checkout@v3
-        if: github.ref_name == 'main' || github.ref_name == 'dev'
+        if: github.ref_name == 'dev'
         with:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
         uses: actions/checkout@v3
-        if: github.ref_name == '[0-9].[0-9].[0-9]-nonprod'
+        if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
       - name: 'Cleanup build folder'
@@ -156,12 +156,12 @@ jobs:
       steps:
       - name: Checkout Release via Workflow Dispatch
         uses: actions/checkout@v3
-        if: github.ref_name == 'main' || github.ref_name == 'dev'
+        if: github.ref_name == 'dev'
         with:
           ref: ${{ github.inputs.release_tag }}
       - name: Checkout Release via Triggered Run
         uses: actions/checkout@v3
-        if: github.ref_name == '[0-9].[0-9].[0-9]-nonprod'
+        if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
       - name: 'Cleanup build folder'
