--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -21,10 +21,6 @@ jobs:
       outputs:
         tag: ${{ steps.tags.outputs.new_tag }}
       steps:
-      - name: Update Run name
-        if: ${{ github.ref_name == main || github.ref_name == dev }}
-        run: |
-          echo "GITHUB_REF=${{ github.inputs.release_tag }}" >> $GITHUB_ENV
       - name: 'Cleanup build folder'
         run: |
           ls -la ./
@@ -41,6 +37,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
+      - name: Update Run name
+        if: ${{ github.ref_name == main || github.ref_name == dev }}
+        run: echo "GITHUB_REF=${{ github.inputs.release_tag }}" >> $GITHUB_ENV
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
