--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -38,8 +38,8 @@ jobs:
         with:
           ref: ${{ github.ref_name }}
       - name: Update Run name
-        if: ${{ github.ref_name == main || github.ref_name == dev }}
-        run: echo "GITHUB_REF=${{ github.inputs.release_tag }}"
+        if: github.ref_name == 'dev'
+        run: echo "GITHUB_REF=${{ github.inputs.release_tag }}" >> $GITHUB_ENV
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
