--- a/.github/workflows/prod-testworkflow.yml
+++ b/.github/workflows/prod-testworkflow.yml
@@ -90,12 +90,12 @@ jobs:
 
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform init
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        working-directory: ${{ github.workspace }}
         run: |
           terraform init -backend-config BackendConfig/preprod-backend-config.tfvars -no-color -input=false
 
       - name: Terraform apply
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        working-directory: ${{ github.workspace }}
         run: |
           terraform apply -var-file=var-overrides/prod.tfvars -input=false -no-color -auto-approve
 
@@ -108,6 +108,12 @@ jobs:
       outputs:
         tag: ${{ steps.tags.outputs.new_tag }}
       steps:
+      - name: 'Cleanup build folder'
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
       - name: Checkout Release via Workflow Dispatch
         uses: actions/checkout@v3
         if: github.ref_name == 'main'
@@ -118,12 +124,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
-      - name: 'Cleanup build folder'
-        run: |
-          ls -la ./
-          rm -rf ./* || true
-          rm -rf ./.??* || true
-          ls -la ./
       - uses: actions/checkout@v3
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -153,6 +153,12 @@ jobs:
       outputs:
         tag: ${{ steps.tags.outputs.new_tag }}
       steps:
+      - name: 'Cleanup build folder'
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
       - name: Checkout Release via Workflow Dispatch
         uses: actions/checkout@v3
         if: github.ref_name == 'main'
@@ -163,12 +169,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags')
         with:
           ref: ${{ github.ref_name }}
-      - name: 'Cleanup build folder'
-        run: |
-          ls -la ./
-          rm -rf ./* || true
-          rm -rf ./.??* || true
-          ls -la ./
       - uses: actions/checkout@v3
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -179,11 +179,11 @@ jobs:
 
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform init
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        working-directory: ${{ github.workspace }}
         run: |
           terraform init -backend-config BackendConfig/prod-backend-config.tfvars -no-color -input=false
 
       - name: Terraform apply
-        working-directory: ${{ github.workspace }}/Projects/Data-Lake
+        working-directory: ${{ github.workspace }}
         run: |
           terraform apply -var-file=var-overrides/prod.tfvars -input=false -no-color -auto-approve
