--- a/.github/workflows/prod-testworkflow.yml
+++ b/.github/workflows/prod-testworkflow.yml
@@ -27,12 +27,7 @@ jobs:
           rm -rf ./* || true
           rm -rf ./.??* || true
           ls -la ./
-      - name: Checkout Release via Workflow Dispatch
-        uses: actions/checkout@v3
-        if: github.ref_name == 'main'
-        with:
-          ref: ${{ github.inputs.release_tag }}
-      - name: Checkout Release via Triggered Run
+      - name: Checkout Release Tag
         uses: actions/checkout@v3
         if: startsWith(github.ref, 'refs/tags')
         with:
@@ -71,12 +66,7 @@ jobs:
           rm -rf ./* || true
           rm -rf ./.??* || true
           ls -la ./
-      - name: Checkout Release via Workflow Dispatch
-        uses: actions/checkout@v3
-        if: github.ref_name == 'main'
-        with:
-          ref: ${{ github.inputs.release_tag }}
-      - name: Checkout Release via Triggered Run
+      - name: Checkout Release Tag
         uses: actions/checkout@v3
         if: startsWith(github.ref, 'refs/tags')
         with:
@@ -114,12 +104,7 @@ jobs:
           rm -rf ./* || true
           rm -rf ./.??* || true
           ls -la ./
-      - name: Checkout Release via Workflow Dispatch
-        uses: actions/checkout@v3
-        if: github.ref_name == 'main'
-        with:
-          ref: ${{ github.inputs.release_tag }}
-      - name: Checkout Release via Triggered Run
+      - name: Checkout Release Tag
         uses: actions/checkout@v3
         if: startsWith(github.ref, 'refs/tags')
         with:
@@ -159,12 +144,7 @@ jobs:
           rm -rf ./* || true
           rm -rf ./.??* || true
           ls -la ./
-      - name: Checkout Release via Workflow Dispatch
-        uses: actions/checkout@v3
-        if: github.ref_name == 'main'
-        with:
-          ref: ${{ github.inputs.release_tag }}
-      - name: Checkout Release via Triggered Run
+      - name: Checkout Release Tag
         uses: actions/checkout@v3
         if: startsWith(github.ref, 'refs/tags')
         with:
