--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -12,7 +12,7 @@ jobs:
     datalake-terraform-plan-dev:
       environment: DEV
       runs-on: ubuntu-latest
-      if: ${{ contains('nonprod', github.ref_name) }}
+      if: contains('nonprod', github.ref_name)
       defaults:
         run:
           shell: bash
