--- a/.github/workflows/prod-testworkflow.yml
+++ b/.github/workflows/prod-testworkflow.yml
@@ -12,7 +12,7 @@ jobs:
     datalake-terraform-plan-preprod:
       environment: PREPROD
       runs-on: ubuntu-latest
-      if: ${{ !contains('nonprod', github.ref_name) }}
+      if: ${{ !contains(github.ref_name, 'nonprod' ) }}
       defaults:
         run:
           shell: bash
@@ -90,7 +90,7 @@ jobs:
     datalake-terraform-plan-prod:
       environment: PROD
       runs-on: ubuntu-latest
-      if: ${{ !contains('nonprod', github.ref_name) }}
+      if: ${{ !contains(github.ref_name, 'nonprod') }}
       defaults:
         run:
           shell: bash
