--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -12,7 +12,7 @@ jobs:
     datalake-terraform-plan-dev:
       environment: DEV
       runs-on: ubuntu-latest
-      if: ${{ contains('nonprod', github.ref_name) }}
+      if: ${{ contains(github.ref_name, 'nonprod' ) }}
       defaults:
         run:
           shell: bash
@@ -88,9 +88,9 @@ jobs:
           terraform apply -var-file=var-overrides/dev.tfvars -input=false -no-color -auto-approve
 
     datalake-terraform-plan-sit:
-      if: ${{ contains('nonprod', github.ref_name) }}
       environment: SIT
       runs-on: ubuntu-latest
+      if: ${{ contains(github.ref_name, 'nonprod' ) }}
       defaults:
         run:
           shell: bash
