--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -6,7 +6,7 @@ on:
 
   push:
     tags:
-      - '[0-9].[0-9].[*]-nonprod'
+      - ${{ contains(github.ref_name, 'nonprod' ) }}
 
 jobs:
     datalake-terraform-plan-dev:
