--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Install Infisical
         working-directory: ${{ github.workspace }}
         run: |
-          apt-get update && curl -1sLf 'https://artifacts-cli.infisical.com/setup.deb.sh' | sudo -E bash
-          sudo apt-get update && sudo apt-get install -y infisical
+          apt-get update && curl -1sLf 'https://artifacts-cli.infisical.com/setup.deb.sh' | bash
+          apt-get update && apt-get install -y infisical
           infisical --version
 
       - uses: hashicorp/setup-terraform@v3
