--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.TEST_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
