--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -1,69 +1,25 @@
-name: Create Release and Change Log
-
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
+name: release-please
+
 jobs:
-  release:
+  release-please:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.TEST_TOKEN }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Get Latest Tag
-        id: get_tag
-        run: |
-          TAG=$(git describe --tags --abbrev=0 || echo "v0.0.0")
-          echo "latest_tag=$TAG" >> $GITHUB_OUTPUT
-
-      - name: Create New Tag
-        id: new_tag
-        run: |
-          OLD_TAG=${{ steps.get_tag.outputs.latest_tag }}
-          VERSION=$OLD_TAG
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-          NEW_TAG="${MAJOR}.${MINOR}.$((PATCH+1))"
-          echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
-          git tag $NEW_TAG
-          git push origin $NEW_TAG
-
-      - name: Generate Change Log
-        run: |
-          NEW_TAG=${{ steps.new_tag.outputs.new_tag }}
-          DATE=$(date +"%Y-%m-%d")
-          echo "" >> CHANGELOG.md
-          echo "## [${NEW_TAG}] - ${DATE}" >> CHANGELOG.md
-          git log ${{ steps.get_tag.outputs.latest_tag }}..HEAD --pretty=format:"- %s" >> CHANGELOG.md
-          echo "" >> CHANGELOG.md
-
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+      - uses: googleapis/release-please-action@v4
         with:
-          tag_name: ${{ steps.new_tag.outputs.new_tag }}
-          name: "Release ${{ steps.new_tag.outputs.new_tag }}"
-          body_path: CHANGELOG.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.READWRITE_GITHUB_ACCESS_TOKEN }}
-
-      - name: Update Terraform Source in All .tf Files
-        run: |
-          NEW_TAG=${{ steps.new_tag.outputs.new_tag }}
-          # Find all .tf files and update only if they contain ref=
-          for file in $(find . -name "*.tf" -type f); do
-            if grep -q 'ref=' "$file"; then
-              sed -i 's|\(ref=\)[^"]*|\1'"${NEW_TAG}"'|' "$file"
-              echo "Updated $file"
-            else
-              echo "Skipped $file (no ref= found)"
-            fi
-          done
-
-      - name: Commit and Push Changes
-        run: |
-          git add .
-          git commit -m "Update Terraform source to ${NEW_TAG} and Change Log"
+          # this assumes that you have created a personal access token
+          # (PAT) and configured it as a GitHub action secret named
+          # `MY_RELEASE_PLEASE_TOKEN` (this secret name is not important).
+          token: ${{ secrets.TEST_TOKEN }}
+          # this is a built-in strategy in release-please, see "Action Inputs"
+          # for more options
+          release-type: simple
