--- a/.github/workflows/update-tf-examples-version.yml
+++ b/.github/workflows/update-tf-examples-version.yml
@@ -1,18 +1,17 @@
 on:
   push:
     tags:
-      - 'v[0-9].[0-9].[0-9]'
+      - 'v[0-9][0-9].[0-9].[0-9][0-9]'
 
-name: update-tf-example-versions
+name: update-tf-module-example-latest-version
 
 jobs:
   update-tf-example-versions:
     runs-on: ubuntu-latest
     steps:
-      - name: Update Terraform Source in All .tf Files
+      - name: Update Terraform Module Source
         run: |
           NEW_TAG=${{ steps.new_tag.outputs.new_tag }}
-          # Find all .tf files and update only if they contain ref=
           for file in $(find . -name "*.tf" -type f); do
             if grep -q 'ref=' "$file"; then
               sed -i 's|\(ref=\)[^"]*|\1'"${NEW_TAG}"'|' "$file"
