--- a/.github/workflows/update-tf-examples-version.yml
+++ b/.github/workflows/update-tf-examples-version.yml
@@ -11,6 +11,10 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.TEST_TOKEN }}
     steps:
+      - name: Checkout Latest Tag
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
       - name: Update Terraform Module Source
         run: |
           NEW_TAG=${{ github.ref_name }}
