fix: Updated commit step

--- a/.github/workflows/update-tf-examples-version.yml
+++ b/.github/workflows/update-tf-examples-version.yml
@@ -29,5 +29,7 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
+          git config --global user.email "devops@nowpensions.com"
+          git config --global user.name "NOW DevOps"
           git add main.tf CHANGELOG.md
-          git commit -m "Update Terraform source to ${NEW_TAG} and Change Log"
+          git commit -m "Update Terraform module example source to ${NEW_TAG}"
