fix: Updated commit step to push changes

--- a/.github/workflows/update-tf-examples-version.yml
+++ b/.github/workflows/update-tf-examples-version.yml
@@ -33,3 +33,4 @@ jobs:
           git config --global user.name "NOW DevOps"
           git add main.tf CHANGELOG.md
           git commit -m "Update Terraform module example source to ${NEW_TAG}"
+          git push
