--- a/.github/workflows/update-tf-examples-version.yml
+++ b/.github/workflows/update-tf-examples-version.yml
@@ -31,4 +31,4 @@ jobs:
           git config --global user.name "NOW DevOps"
           git add .
           git commit -m "Update Terraform module example source to ${NEW_TAG}"
-          git push origin main
+          git push
