fix: updated commit step

--- a/.github/workflows/update-tf-examples-version.yml
+++ b/.github/workflows/update-tf-examples-version.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
+          NEW_TAG=${{ github.ref_name }}
           git config --global user.email "devops@nowpensions.com"
           git config --global user.name "NOW DevOps"
           git add .
